--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
     "description": "A lightweight framwork equivalent of expressjs",
     "type": "library",
     "require-dev": {
+        "symfony/dependency-injection": "^6.1",
         "phpunit/phpunit": "^9.5"
+    },
+    "require": {
+        "php": ">= 8.1",
+        "psr/container": "^2.0"
     },
     "license": "MIT",
     "autoload": {
