--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "UnknownRori\\Rin\\Tests": "tests/"
+            "UnknownRori\\Rin\\Tests\\": "tests/"
         }
     },
     "authors": [
