--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "library",
     "require-dev": {
         "symfony/dependency-injection": "^6.1",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "predis/predis": "^2.0",
+        "symfony/var-dumper": "^6.1"
     },
     "require": {
         "php": ">= 8.1",
